<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/travel_wallpaper"
        android:stretchColumns="1"
        android:padding="20dp">

         <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_name" />

            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameTrip" />
        </TableRow>
         <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_budget" />


            <EditText
                android:id="@+id/budgetInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/budgetInput" />
        </TableRow>
        <!-- Destination -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination" />

            <EditText
                android:id="@+id/inputDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/destinationHint" />
        </TableRow>

        <!-- Start Date -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date" />

            <EditText
                android:id="@+id/inputStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/startDate" />
        </TableRow>

         <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date" />

            <EditText
                android:id="@+id/inputEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/endDate" />
        </TableRow>

        <!-- Trip Type -->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_type" />

            <RadioGroup
                android:id="@+id/radioGroupType"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioBusiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business" />

                <RadioButton
                    android:id="@+id/radioLeisure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leisure" />

                <RadioButton
                    android:id="@+id/radioAdventure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adventure" />

            </RadioGroup>

        </TableRow>


        <!-- Checklist -->
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checklist" />

            <CheckBox
                android:id="@+id/checkPassport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passport" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travelers" />

            <EditText
                android:id="@+id/inputTravelers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_travelers"
                android:inputType="number" />

        </TableRow>

        <!-- Save Button -->
        <TableRow>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_trip"
                android:layout_marginTop="20dp"
                android:layout_span="2" />
        </TableRow>

    </TableLayout>

</ScrollView>
